# niri-battery-keeper

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  config.example.toml
.github/workflows/: release.yml
assets/: 60-intel-rapl-energy.rules  niri-battery-keeper.desktop  org.niri-battery-keeper.set-rapl.policy
packaging/aur/niri-battery-keeper-bin/: .SRCINFO  PKGBUILD
src/: bootstrap.rs  config.rs  cputopo.rs  main.rs  proto.rs  rapl_helper.rs
src/daemon/: battery.rs  cgroup.rs  clipboard.rs  energy.rs  ipc.rs  mod.rs  niri.rs  proctree.rs  system_scan.rs  throttle.rs  tray.rs
src/gui/: mod.rs  tdp.rs
systemd/: niri-battery-keeper.service
systemd/system/: niri-battery-keeper.service
