[package]
name = "niri-battery-keeper"
version = "0.1.1"
edition = "2021"
description = "Keeps battery on a Niri laptop by reining in background apps via systemd cgroups"
license = "MIT"
repository = "https://github.com/petrovichest/niri-battery-keeper"

[[bin]]
name = "niri-battery-keeper"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland"] }
egui = "0.29"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
libc = "0.2"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
